# andi-matching

./: .env.example  .gitignore  .pylintrc  .travis.yml  Dockerfile  HISTORY.md  Makefile  Pipfile  README.md  TODO.md  VERSION.txt  env.default.sh  main.asgi  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
matching/: __init__.py  exec_drive.py  lib_match.py  match.py  sql.py
matching/data_files/: andi_rome2naf_20191203.csv  andi_rome2naf_20200130.csv
misc/: deploy_ed25519.enc  montpellier_K1706_12.json  siege_api.sh  siege_urls.txt
output/: .~lock.pheng_bun_huy.csv#  .~lock.simon_alexandra.ods#
src/andi/matching/: README.md  __init__.py  exec_drive.py  lib_match.py  match.py  sql.py
src/andi/matching/data_files/: andi_rome2naf_20191203.csv
src/andi/matching/rome_defs/: I1604.yaml
src/andi/webservice/: asgi.py  criterion_parser.py  dbpool.py  defaultsettings.py  entreprises.py  hardconfig.py  hardsettings.py  lib_db.py  lib_rome_suggest_v2.py  library.py  main.py  match.py  model_input.py  model_output.py  model_rome_suggest.py  romesuggest.py  settings.py  workers.py
src/andi/webservice/data_files/: andi_rome2naf_20200130.csv
src/andi/webservice/routers/: __init__.py  entreprise.py  entreprises_1_0.py  match.py  rome_suggest.py  romes_1_0.py  romesuggest.py  root.py  track.py
src/andi/webservice/schemas/: __init__.py  common.py  entreprise.py  entreprises.py  input.py  match.py  output.py  rome_suggest.py  romes.py  romesuggest.py  tracker.py
tests/: __init__.py  conftest.py  test_conftest.py  test_dbpool.py  test_entreprises_route.py  test_entreprises_schema.py  test_library.py  test_main.py  test_match.py  test_match_route.py  test_match_schema.py  test_rome_suggest_route.py  test_romes_route.py  test_root_route.py  test_settings.py
tests/behave/: environment.py  fixtures.py
tests/behave/features/: rome_suggest.feature
tests/behave/steps/: api_steps.py
tests/data/: customconfig.py
webservice/: __init__.py  config.default.yaml  criterion_parser.py  lib_db.py  lib_rome_suggest_v2.py  library.py  main.py  model_entreprise.py  model_input.py  model_output.py  model_rome_suggest.py  model_tracker.py
