# ==========
# setuptools
# ==========
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = andi-matching
version = file:VERSION.txt
description = ANDi Matching Toolset and Service
long_description = file:README.md,HISTORY.md
long_description_content_type = text/markdown
keywords =
    Disabled
    Job
    Search
license = GNU Affero General Public License v3
license_files = LICENSE
platform = any
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Affero General Public License v3
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Framework :: AsyncIO
    Intended Audience :: Other Audience
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Natural Language :: French
author = ICDC ANDi Team
author_email = andi@caissedesdepots.fr
url = https://github.com/betagouv/andi-matching

[options]
python_requires = >=3.7
install_requires =
    aiohttp
    asyncpg
    fastapi
    pandas
    pyflexconfig
    python-dotenv
    python-slugify[unidecode]
    pytz
    uvicorn
    Whoosh

tests_require = ${options.extras_require:dev}
zip_safe = False
package_dir =
    =src
packages = find_namespace:

[options.package_data]
andi.matching = rome_defs/*.yaml, *.yaml
andi.webservice = referentiels/*.csv, data_files/*.csv

[options.packages.find]
where = src

[options.extras_require]
dev =
    mock ; python_version < '3.8'
    flake8
    pylint
    pylint-fail-under
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    requests
    tox

[options.data_files]
. = VERSION.txt

[options.entry_points]
console_scripts =
    andi-api = andi.webservice.main:main

# ===========
# Other tools
# ===========
[flake8]
max-line-length = 100
ignore = E501, F811, E128, E402, W503
exclude = .venv .git .eggs .tox
filterwarnings =
  ignore::FutureWarning

[tool:isort]
multi_line_output=3
use_parentheses=True
combine_as_imports=True

[tool:pytest]
testpaths = tests
# Attention : bloque l'exécution des tests sous PyCharm
#addopts = --verbosity=2 --cov=andi.webservice
addopts = --verbosity=2
filterwarnings =
    ignore::DeprecationWarning

[pylint]
ignore =
    .git,
    __pycache__,
    .venv
disable =
    missing-docstring,
    too-many-instance-attributes,
    too-many-format-args,
    too-many-locals,
    line-too-long,
    ungrouped-imports,
    redefined-outer-name,
    invalid-name,
    no-self-use,
    no-name-in-module,
    pointless-string-statement,
    too-few-public-methods,
    fixme,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-lambda
max-line-length=120
good-names=fd

[tox:tox]
envlist = py37,py38

[tox:testenv]
commands_pre =
    pip install -e .[dev]
commands =
    pytest
